# bioimage-py

./: .gitignore  CLAUDE.md  DESIGN_DOC.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: build_conda.yml  build_pip.yml
bioimage_py/: __init__.py  _indexing.py  copy.py  downsample.py  transformation.py  util.py
bioimage_py/filters/: __init__.py  filters.py
bioimage_py/io/: _util.py
bioimage_py/morphology/: __init__.py  morphology.py  regionprops.py
bioimage_py/runner/: __init__.py  _harness.py  base.py  config.py  distributed.py  factory.py
bioimage_py/segmentation/: __init__.py  label.py  watershed.py
bioimage_py/sources/: __init__.py  array_source.py  base.py  cloudvolume_source.py  dispatch.py  file_source.py  webknossos_source.py
bioimage_py/stats/: __init__.py  stats.py
bioimage_py/wrapper/: __init__.py  affine.py  base.py  generic.py  resize.py
scripts/: benchmark_morphology.py
tests/: conftest.py  test_affine_source.py  test_copy.py  test_downsample.py  test_filters.py  test_morphology.py  test_morphology_features.py  test_resized_source.py  test_runner_failures.py  test_runner_map.py  test_runner_parity.py  test_slurm_runner.py  test_source_indexing.py  test_sources.py  test_stats.py  test_transformation.py  test_transformation_wrappers.py  test_util.py  test_wrapper_generic.py
tests/segmentation/: test_label.py  test_watershed.py
