[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioimage_py"
version = "0.0.1"
description = "Efficient, parallel, and distributed implementation of image analysis and segmentation functionality."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Constantin Pape", email = "constantin.pape@cs.uni-goettingen.de" }]
dependencies = [
    "numpy",
    "cloudpickle",
    "tqdm",
    "threadpoolctl",
    "bioimage-cpp",
]

[project.optional-dependencies]
io = ["zarr>=3", "z5py"]
test = ["pytest", "zarr>=3", "scikit-image", "scipy"]
dev = ["flake8", "pyflakes"]

[tool.setuptools.packages.find]
include = ["bioimage_py*"]
